Ignore lock files. Arrgh!

--- a/build.gradle
+++ b/build.gradle
@@ -97,6 +97,7 @@ task myZip(type: Zip) {
     exclude '**/build/**'
     exclude '**/out/**'
     exclude '**/target/**'
+    exclude '**/*.lock'
     /*
     exclude {
         details ->
