--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,8 @@ idea.module {
 
 
 dependencies {
+    compile "org.jboss.weld.se:weld-se-core:3.0.0.CR2"
+    
     testCompile "junit:junit:4.12"
     testCompile 'org.hamcrest:hamcrest-all:1.3'
     testCompile "org.mockito:mockito-all:1.9.5"
