--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,6 @@ archivesBaseName = 'job-importer'
 version = '1.0-SNAPSHOT'
 
 
-
 repositories {
     mavenLocal()
     mavenCentral()
@@ -43,8 +42,12 @@ idea.module {
 
 
 dependencies {
-    compile "org.jboss.weld.se:weld-se-core:3.0.0.CR2"
-    
+    compile     "javax:javaee-api:7.0"
+
+    compile( "org.jboss.weld.se:weld-se-core:3.0.0.CR2") {
+    }
+//    runtime "org.jboss.weld.se:weld-se-core:3.0.0.CR2"
+
     testCompile "junit:junit:4.12"
     testCompile 'org.hamcrest:hamcrest-all:1.3'
     testCompile "org.mockito:mockito-core:2.7.17"
@@ -117,8 +120,8 @@ task run(type: JavaExec, dependsOn: classes) {
     classpath = sourceSets.main.runtimeClasspath
 
     // Define the main application
-    main = "uk.co.xenonique.clients.unisys.LightApplication"
-
+    main = "uk.co.xenonique.client.myjobmatcher.MainApplication"
+    
     // arguments to pass to the application
     args 'Sequence'
 }
