--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,15 @@ archivesBaseName = 'job-importer'
 version = '1.0-SNAPSHOT'
 
 
+ext {
+    hamcrestVersion     = "1.3"
+    jandexVersion       = "1.2.2.Final"
+    javaee7Version      = "7.0"
+    junitVersion        = "4.12"
+    mockitoVersion      = "2.7.17"
+    weldVersion         = "2.2.4.Final"
+}
+
 repositories {
     mavenLocal()
     mavenCentral()
@@ -40,20 +49,16 @@ idea.module {
     downloadSources = true
 }
 
-
 dependencies {
-    compile     "javax:javaee-api:7.0"
+    compile     "javax:javaee-api:${javaee7Version}"
 
+    compile     "org.jboss.weld.se:weld-se-core:${weldVersion}"
+    compile     "org.jboss.weld:weld-core:${weldVersion}"
+    compile     "org.jboss:jandex:${jandexVersion}"
 
-    compile( "org.jboss.weld.se:weld-se-core:2.2.4.Final") {
-    }
-//    runtime "org.jboss.weld.se:weld-se-core:3.0.0.CR2"
-    compile     "org.jboss.weld:weld-core:2.2.4.Final"
-    compile     "org.jboss:jandex:1.2.2.Final"
-
-    testCompile "junit:junit:4.12"
-    testCompile 'org.hamcrest:hamcrest-all:1.3'
-    testCompile "org.mockito:mockito-core:2.7.17"
+    testCompile "junit:junit:${junitVersion}"
+    testCompile "org.hamcrest:hamcrest-all:${hamcrestVersion}"
+    testCompile "org.mockito:mockito-core:${mockitoVersion}"
 }
 
 // Override Gradle defaults - a force an exploded JAR view
@@ -126,6 +131,6 @@ task run(type: JavaExec, dependsOn: classes) {
     main = "uk.co.xenonique.client.myjobmatcher.MainApplication"
     
     // arguments to pass to the application
-    args 'Sequence'
+    args 'Seetec Astronomy'
 }
 
